[tool.poetry]
name = "spark_novartis_cases"
version = "0.1.0"
description = ""
authors = ["Anton Kuzmin <Anton_Kuzmin4@epam.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
flake8-quotes = "^3.3.1"
flake8-isort = "^4.1.1"
mypy = "^0.931"
pyspark-test = "^0.2.0"
pytest-mock = "^3.7.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
